load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

filegroup(
    name = "livox_sdk2_src",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

cmake(
    name = "livox_sdk2",
    lib_source = ":livox_sdk2_src",
    copts = [
        "-Wc++11-compat",
        "-Wno-missing-noreturn",
        "-Wno-unused-parameter",
        "-Wno-gnu-zero-variadic-macro-arguments",
        "-Wno-non-c-typedef-for-linkage",
        "-Wno-unknown-warning-option",
        "-Wno-ignored-qualifiers",
        "-Wno-missing-field-initializers",
        "-Wno-error=unused-const-variable",
        "-Wno-error=unused-variable",
        "-Wno-error=delete-non-abstract-non-virtual-dtor",
    ],
    linkopts = [
        "-pthread",
    ],
    lib_name = "liblivox_lidar_sdk_static",
    visibility = ["//visibility:public"],
)
